# hackods-unam

./: .gitattributes  .gitignore  LICENSE  METADATOS.md  README.md  ai-log.md  main.py  pyproject.toml
.github/workflows/: publish.yml
dashboard/: _quarto.yml  index.html  index.qmd  styles.css
dashboard/.quarto/idx/: about.qmd.json  index.qmd.json
dashboard/_site/: about.html  index.html  search.json
dashboard/datos/: ods11_final.json  ods11_final_metadato.json  resumen_alcaldias.json  resumen_colonias.json  resumen_insumos.json
datos/crudos/: origendatos.csv
datos/indicadoresODS11/: ods11_final.json
datos/procesados/: METADATOS.md  catastro_unificado_cdmx.gpkg  colonias_cdmx.gpkg  escuelas_privadas.gpkg  hospitales_cs.gpkg  infra_vial_ciclista.gpkg  insumos_buffer_35m.gpkg  manzanas_cdmx_poblacion.gpkg  rp_WifiCDMX.gpkg  rutas_manzanas_cdmx_1250m.gpkg
notebooks/: 02_limpieza_datos_w.ipynb  03_limpieza_datos_l.ipynb  calculo_distancias_cdmx.ipynb  cargaMetadatos.ipynb  carga_insumos.ipynb  cruce-capas-accesibilidad.ipynb  hello_world.ipynb  manejoDBS.ipynb  p0.ipynb
notebooks/.ipynb_checkpoints/: hello_world-checkpoint.ipynb
presentacion/: _quarto.yml  index.qmd
presentacion/_site/: custom.css  index.html  search.json
scripts/: asignar_geometrias.py  calcular_moran_lisa.py  cruce_accesibilidad.py  dividir_colonias.py  generar_indicadores_ods11.py  generar_mapas_estaticos.py  generar_resumen_insumos.py  generar_resumenes_dashboard.py  generar_vista_moran.py  generar_vistas_clasificacion.py  preparar_datos_insumos_dashboard.py
(+3271 files in other folders)
