[project]
name = "trio-tristeza-ods"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "esda>=2.9.0",
    "folium>=0.20.0",
    "geopandas>=1.1.3",
    "jupyter>=1.1.1",
    "libpysal>=4.14.1",
    "mapclassify>=2.10.0",
    "matplotlib>=3.10.8",
    "notebook>=7.5.5",
    "pandas>=3.0.2",
    "plotly>=6.6.0",
]
